--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,7 @@ Layout/LineLength:
  Max: 130
 # 下記ファイルはチェックの対象から外す
  Exclude:
+   - "Rakefile"
    - "spec/rails_helper.rb"
    - "spec/spec_helper.rb"
 
